--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
- <!-- FlatFy Theme - Andrea Galanti /-->
+ <!-- Elitia Social Media Page /-->
+ <!-- FlatFy Theme, Made by Andrea Galanti. big thank you /-->
+
 <!doctype html>
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
@@ -8,10 +10,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="description" content="Flatfy Free Flat and Responsive HTML5 Template ">
-    <meta name="author" content="">
+    <meta name="description" content="Elitia Social Media Page ">
+    <meta name="author" content="Elitia, Hajar EL KOUMIKHI">
 
-    <title>Flatfy – Free Flat and Responsive HTML5 Template</title>
+    <title>Elitia Social Media Page ♥</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
