--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
     <div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
 			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Elitia</h1>
-			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Dreamer & YouTuber</h3>
+			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Dreamer & YouTuber ♥</h3>
 			<ul class="list-inline intro-social-buttons">
-				<li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Twitter</span></a>
-				</li>
-				<li id="download" ><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Free Download</span></a>
+				
+				<li id="download" ><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Mon blog</span></a>
 				</li>
 			</ul>
 		</div>    
