Test CSS lien Facebook

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/tweet.svg" alt="Generic placeholder image">
 				  <h3>Facebook</h3>
-				  <p class="lead">Retrouvez-moi sur Facebook : <a href="https://goo.gl/KYr3Pi">Elitia Galaxy</a> </p>
+				  <p class="lead">Retrouvez-moi sur Facebook : <span style="color:#368bd1"><a href="https://goo.gl/KYr3Pi">Elitia Galaxy</a></span> </p>               
 
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
