Ajout de l'icon Facebook

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#home">Flatfy</a>
+				<a class="navbar-brand" href="#home">Elitia</a>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
@@ -124,7 +124,7 @@
 				</div><!-- /.col-lg-4 -->
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img  class="rotate" src="img/icon/picture.svg" alt="Generic placeholder image">
+				  <img  class="rotate" src="img\icon\facebook.png" alt="Generic placeholder image">
 				   <h3>Twitter</h3>
 				   <p class="lead">Retrouvez-moi sur Twitter : <a href="https://goo.gl/2Nt0wm">Elitia Galaxy</a> </p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
