--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
 
         <div class="container">
 			
-            <div class="row">
+            <div class="row"> 
 			
 				<div class="col-sm-6 pull-right wow fadeInRightBig">
                     <img class="img-responsive " src="img/ipad.png" alt="">
                 </div>
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Ma dernière vidéo</h3>
+                    <h3 class="section-heading">Ma dernière vidéo</h3>  <?php echo '<p>Bonjour le monde</p>'; ?>
 					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
                     <p class="lead">
 						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
