--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
             <div class="row"> 
 			
 				<div class="col-sm-6 pull-right wow fadeInRightBig">
-                    <img class="img-responsive " src="img/ipad.png" alt="">
+                    <!-- <img class="img-responsive " src="img/ipad.png" alt=""> -->
+                    <iframe width="207" height="158" src="https://www.youtube.com/embed/jjUDn0XkUBg" frameborder="0" allowfullscreen></iframe>
                 </div>
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
@@ -188,7 +189,7 @@
 					</p>
 
 					
-					<a class="btn btn-embossed btn-info" href="#" role="button">Regarder la vidéo</a></p>
+					<a class="btn btn-embossed btn-info" href="https://www.youtube.com/watch?v=jjUDn0XkUBg" role="button">Regarder la vidéo</a></p>
 				</div>   
             </div>
         </div>
