Debut article insertion

--- a/index.html
+++ b/index.html
@@ -202,19 +202,9 @@
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-1" class="owl-carousel">
-						<a href="img/iphone.png" class="image-link">
+						<a href="img/articlePic.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
-							</div>
-						</a>
-						<a href="img/iphone.png" class="image-link">
-							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
-							</div>
-						</a>
-						<a href="img/iphone.png" class="image-link">
-							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/articlePic.png" alt="">
 							</div>
 						</a>
 					</div>       
@@ -222,16 +212,13 @@
 				
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">   
                     <h3 class="section-heading">Article en vedette</h3>
-					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
+					<div class="sub-title lead3">Hello World !<br> </div>
                     <p class="lead">
-						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
-						Sed virtutem ipsam inchoavit, nihil ampliusuma. Scien tiam pollicentur, 
-						uam non erat mirum sapientiae lorem cupido
-						patria esse cariorem. Quae qui non vident, nihilamane umquam magnum ac cognitione.
+						Tout mon premier article pour me présenter, et définir les grandes lignes de ma chaîne Elitia. 
+						Je vous souhaite la bienvenue dans mon univers ♥
 					</p>
 
-					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
-					 <a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a></p>
+					<a class="btn btn-embossed btn-info" href="#" role="button">Lire Plus </a></p>
 				</div>  			
 			</div>
         </div>
