--- a/index.html
+++ b/index.html
@@ -230,20 +230,20 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
-				<h2>Get Live Updates</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<h2>Rejoignez l'aventure</h2>
+				<p class="lead" style="margin-top:0"></p>
 			 </div>
 			<div class="col-md-6 col-md-offset-3 text-center">
 				<div class="mockup-content">
 						<div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
-							<button type="button "><span>Subscribe to our Newsletter</span></button>
+							<button type="button "><span>Recevez les nouveautés de ma chaîne</span></button>
 							<div class="morph-content">
 								<div>
 									<div class="content-style-form content-style-form-4 ">
-										<h2 class="morph-clone">Subscribe to our Newsletter</h2>
+										<h2 class="morph-clone">Inscrivez-vous à la newsletter !</h2>
 										<form>
-											<p><label>Your Email Address</label><input type="text"/></p>
-											<p><button>Subscribe me</button></p>
+											<p><label>Votre e-mail adresse</label><input type="text"/></p>
+											<p><button>s'inscrire</button></p>
 										</form>
 									</div>
 								</div>
